Use ci prefix with flavors
Our default provider strongly recomend the ci named flavor usage,
so we are switching it to the default.

The change also removes unused variables.

Change-Id: Ia8e14b572459f5f7bb4c37fb997066a3c2bb62fe

--- a/plugins/openstack/provision_vms.yml
+++ b/plugins/openstack/provision_vms.yml
@@ -9,8 +9,7 @@
       config_drive: no
       wait: yes
       # Flavor defaults
-      flavor_id: m1.large
-      flavor_name: ir-flavor
+      flavor_id: ci.m1.large
   roles:
      - role: hostvars
        action: cleanup
