[WIP] using white list for kuryr tests
Change-Id: Ia7e1d02e0899c3405d969971f07c6304005815fb

--- a/plugins/tempest/vars/tests/kuryr.yml
+++ b/plugins/tempest/vars/tests/kuryr.yml
@@ -1,7 +1,8 @@
 ---
 test_dict:
-  test_regex: 'kuryr'
-  whitelist: []
+  test_regex: ''
+  whitelist:
+    - ^tempest_kuryr_plugin_ds.tests.scenario.test_restart.TestNeutronRestart.test_restart_neutron_api
   blacklist: []
   plugins:
     kuryr:
