open fencing ports on external_net only when external net is defined
Change-Id: Ibc48740f02e3a99dd2fc3ee00499450b50956bfd

--- a/infrared/common/roles/vbmc/tasks/configure.yml
+++ b/infrared/common/roles/vbmc/tasks/configure.yml
@@ -47,6 +47,7 @@
   - name: Set external network bmc address
     set_fact:
         vbmc_external_net_address:  "{{ hostvars['hypervisor'][ansible_external_name].ipv4.network }}/{{ hostvars['hypervisor'][ansible_external_name].ipv4.netmask }}"
+    when: hostvars['hypervisor'][ansible_external_name] is defined
 
   - include_tasks: iptables.yml
 
