open fencing ports on external_net only when external net is defined
Change-Id: Ibc48740f02e3a99dd2fc3ee00499450b50956bfd

--- a/infrared/common/roles/vbmc/tasks/iptables.yml
+++ b/infrared/common/roles/vbmc/tasks/iptables.yml
@@ -70,6 +70,7 @@
           source: "{{ vbmc_external_net_address }}"
           destination_port: "{{ item.value }}"
       loop: "{{ vbmc_ports|dict2items }}"
+      when: hostvars['hypervisor'][ansible_external_name] is defined
 
   when: vbmc_host == 'hypervisor'
   become: True
