--- a/infrared/common/roles/vbmc/tasks/iptables.yml
+++ b/infrared/common/roles/vbmc/tasks/iptables.yml
@@ -58,18 +58,20 @@
           source: "{{ vbmc_management_address }}"
           destination_port: "{{ item.value }}"
       loop: "{{ vbmc_ports|dict2items }}"
-
-    - name: allow access to port vbmc ports from undercloud external network
-      iptables:
-          action: insert
-          comment: "Infrared: vbmc ports"
-          table: filter
-          chain: INPUT
-          jump: ACCEPT
-          protocol: "udp"
-          source: "{{ vbmc_external_net_address }}"
-          destination_port: "{{ item.value }}"
-      loop: "{{ vbmc_ports|dict2items }}"
+    - block:
+        - name: allow access to port vbmc ports from undercloud external network
+          iptables:
+              action: insert
+              comment: "Infrared: vbmc ports"
+              table: filter
+              chain: INPUT
+              jump: ACCEPT
+              protocol: "udp"
+              source: "{{ vbmc_external_net_address }}"
+              destination_port: "{{ item.value }}"
+          loop: "{{ vbmc_ports|dict2items }}"
+      when: hostvars['hypervisor'][ansible_external_name] is defined
+      
 
   when: vbmc_host == 'hypervisor'
   become: True
