[collect-logs] Use user root when doing top inside containers
Use the root when executing the top command inside the containers.
This is to avoid creation of the .config folder inside the home folder
which confuses some of the containers, like mysql.

RHOSINFRA-2628

Change-Id: Icf5e399f85bfd0caa55780e6fcedbae2fe3bdaf5

--- a/plugins/collect-logs/tasks/collect_host_logs.yml
+++ b/plugins/collect-logs/tasks/collect_host_logs.yml
@@ -173,8 +173,8 @@
                   echo "+ $cont_cmd top $cont user pid ppid pcpu vsz tty state time etime args" &>> "$INFO_FILE";
                   $cont_cmd top "$cont" user pid ppid pcpu vsz tty state time etime args &>> "$INFO_FILE";
               fi
-              echo "+ $cont_cmd exec $cont top -bwn1" >> "$INFO_FILE";
-              $cont_cmd exec "$cont" top -bwn1 &>> "$INFO_FILE";
+              echo "+ $cont_cmd exec --user root $cont top -bwn1" >> "$INFO_FILE";
+              $cont_cmd exec --user root "$cont" top -bwn1 &>> "$INFO_FILE";
               echo "+ $cont_cmd inspect $cont" >> "$INFO_FILE";
               $cont_cmd inspect "$cont" &>> "$INFO_FILE";
               $cont_cmd logs "$cont" &> "$INFO_DIR/stdout.log";
