WIP: run collect-ansible-facts after significant parts of oc deploy
We want to use 'collect-ansible-facts' role to gather basic and more
in-depth information about the tripleo overcloud deployment. We want
to make sure it runs even on oc deploy failure hence we use block/always
for it.
The 'collect-ansible-facts' role is also improved to accept filename
parameter and save results in infrared workspace.

RHOSINFRA-2616

Change-Id: I446f7c9d6732fe70b091b7d6621aac347530919f

--- a/plugins/tripleo-overcloud/main.yml
+++ b/plugins/tripleo-overcloud/main.yml
@@ -31,13 +31,18 @@
       - install.postreboot|default(False)
 
 - name: Collect Ansible facts
-  import_playbook: 'collect-ansible-facts.yml'
-  when:
-      - install.collect.ansible.facts|default(False)
-      - not install.upgrade|default('')
-      - not install.ocupdate|default(False)
-      - not install.pre|default('')
-      - not install.introspect|default('')
-      - not install.tagging|default('')
+  any_errors_fatal: false
+  gather_facts: yes
+  hosts: all
+  tasks:
+    - block:
+      - set_fact:
+          ansible_facts_filename: "infrared_tripleo-overcloud_after_{{ inventory_hostname }}"
+
+      - include_role:
+          name: collect-ansible-facts
+      when:
+        - install.collect.ansible.facts|default(False)
+        - install.deploy
   tags: collect-ansible-facts
   ignore_errors: True
