--- a/infrared/common/roles/collect-ansible-facts/defaults/main.yml
+++ b/infrared/common/roles/collect-ansible-facts/defaults/main.yml
@@ -1,3 +1,3 @@
-ansible_facts_dir_tmp: "{{ ansible_user_dir }}/ansible-facts_tmp"
-ansible_facts_dir_dest: "{{ inventory_dir }}/../../../ansible-facts"
-ansible_facts_filename: "infrared-ansible-facts"
+collect_ansible_facts_dir_tmp: "{{ ansible_user_dir }}/ansible-facts_tmp"
+collect_ansible_facts_dir_dest: "{{ inventory_dir }}/ansible-facts" # so we capture these files as part of infrared workspace
+collect_ansible_facts_filename: "infrared-ansible-facts"
