tripleo-undercloud: support multi hypervisor
Create "undercloud_hypervisors" group in inventory with undercloud
hosting hypervisors. Use this group in plays instead of
"hosts: hypervisor".

GH-360

Change-Id: Iac43249ba848671bb3a1ec3f3cf032ac2121b597

--- a/plugins/tripleo-undercloud/backup.yml
+++ b/plugins/tripleo-undercloud/backup.yml
@@ -1,5 +1,5 @@
 - name: Backup the Undercloud image
-  hosts: hypervisor
+  hosts: undercloud_hypervisors
   gather_facts: yes
   any_errors_fatal: true
   vars:
