--- a/plugins/tripleo-undercloud/restore.yml
+++ b/plugins/tripleo-undercloud/restore.yml
@@ -2,7 +2,7 @@
 # Any step that should happen before initiating the osp-d playbook
 # This could be validation of the hosts, package installation that is assumed as per the guide, etc..
 - name: Prepare our undercloud
-  hosts: hypervisor
+  hosts: undercloud_hypervisors
   gather_facts: yes
   any_errors_fatal: true
   vars_files:
