--- a/plugins/tripleo-undercloud/tasks/undercloud_reboot.yml
+++ b/plugins/tripleo-undercloud/tasks/undercloud_reboot.yml
@@ -8,6 +8,12 @@
       poll: 0
       ignore_errors: true
 
+    - name: get undercloud hypervisor
+      set_fact:
+          undercloud_hypervisor: "{{ item }}"
+      when: hostvars[item].ansible_host in hostvars[inventory_hostname].ansible_ssh_common_args
+      with_items: "{{ groups.undercloud_hypervisors }}"
+
     - name: wait for node to go down
       become: false
       command: ping -c1 {{ ansible_host }}
@@ -26,7 +32,7 @@
       retries: 60
       delay: 3
       ignore_errors: true
-      delegate_to: hypervisor
+      delegate_to: "{{ undercloud_hypervisor }}" 
       when: "'hypervisor' in groups"
 
     - name: wait for node to go down(virthost)
