Remove controller OVNCMSOptions line in networker deployments
Current configuration for composable networker OVN deployment
is wrong as SNAT traffic can either go via controller or network
nodes.

In networker deployments we'd like to use just networkers and
not controllers. To do so we need to remove following block from
ovn-ha environment file:

ControllerParameters: OVNCMSOptions: "enable-chassis-as-gw"
Change-Id: I3de1fca301183140f975c156fa5bb9dfc161dc86

--- a/plugins/tripleo-overcloud/tasks/network.yml
+++ b/plugins/tripleo-overcloud/tasks/network.yml
@@ -241,3 +241,11 @@
   when:
       - install.network.ovn and install.network.dvr
       - install.version|default(undercloud_version)|openstack_release >= 13
+
+- name: Remove OVNCMSOptions for controller nodes
+  shell: sed -i '/ControllerParameters/,+1 d' {{ install.heat.templates.basedir }}/environments/services/neutron-ovn-ha.yaml
+  when:
+      - install.version|default(undercloud_version)|openstack_release >= 13
+      - install.network.ovn
+      - install.role.files is defined
+      - 'networker' in install.role.files
