tripleo-undercloud: support multi hypervisor
Create "undercloud_hypervisors" group in inventory with undercloud
hosting hypervisors. Use this group in plays instead of
"hosts: hypervisor".

GH-360

Change-Id: Iac43249ba848671bb3a1ec3f3cf032ac2121b597

--- a/plugins/tripleo-undercloud/configure.yml
+++ b/plugins/tripleo-undercloud/configure.yml
@@ -12,7 +12,7 @@
       - default_conf: "{{ (osp_release <= 13) | ternary(conf_instack, (osp_release < 15) | ternary(conf_oooclient, conf_oooclient_py3)) }}"
       - local_src: "{%- if conf.file|default('') -%}
                 {{ conf.file }}
-                {%- elif 'hypervisor' in groups.all or 'bmc' in groups -%}
+                {%- elif 'hypervisor' in groups.all or 'undercloud_hypervisors' in groups or 'bmc' in groups -%}
                 templates/undercloud.conf.j2
                 {%- else -%}
                 False
