rally unable to start tests unless "jsonschema<3.0.0"
tested with : pip install "jsonschema<3.0.0"

Now it works :
(rally3_test) [stack@undercloud-0 ~]$     rally deployment check
2019-07-26 13:23:54.562 301060 INFO rally.common.plugin.discover [-] Loading plugins from directories /home/stack/.rally/plugins/*
2019-07-26 13:23:54.572 301060 INFO rally.common.plugin.discover [-] 	 Loaded module with plugins: /home/stack/.rally/plugins/instanceha.py
2019-07-26 13:23:54.575 301060 INFO rally.common.plugin.discover [-] 	 Loaded module with plugins: /home/stack/.rally/plugins/persistantVM.py
2019-07-26 13:23:54.577 301060 INFO rally.common.plugin.discover [-] 	 Loaded module with plugins: /home/stack/.rally/plugins/vrrp.py
2019-07-26 13:23:54.578 301060 WARNING rally.common.i18n [-] rally.common.i18n module is deprecated and is going to be removed. Please do not import it.
2019-07-26 13:23:54.579 301060 INFO rally.common.plugin.discover [-] 	 Loaded module with plugins: /home/stack/.rally/plugins/context/dual_network_wrapper.py
2019-07-26 13:23:54.581 301060 INFO rally.common.plugin.discover [-] 	 Loaded module with plugins: /home/stack/.rally/plugins/context/dual_networks.py
--------------------------------------------------------------------------------
Platform openstack:
--------------------------------------------------------------------------------

Available services:
+-------------+----------------+-----------+
| Service     | Service Type   | Status    |
+-------------+----------------+-----------+
| __unknown__ | alarming       | Available |
| __unknown__ | event          | Available |
| __unknown__ | placement      | Available |
| ceilometer  | metering       | Available |
| cinder      | volumev2       | Available |
| cinder      | volumev3       | Available |
| cloud       | cloudformation | Available |
| glance      | image          | Available |
| gnocchi     | metric         | Available |
| heat        | orchestration  | Available |
| keystone    | identit

--- a/plugins/rally/tasks/setup/pip/main.yml
+++ b/plugins/rally/tasks/setup/pip/main.yml
@@ -32,6 +32,7 @@
       - cryptography
       - rally-openstack
       - openstacksdk
+      - "jsonschema<3.0.0"
 
 - name: Clone Rally-Plugins git repo
   git:
