--- a/infrared/common/roles/vbmc/defaults/main.yml
+++ b/infrared/common/roles/vbmc/defaults/main.yml
@@ -1,6 +1,7 @@
 # choice from hypervisor or undercloud
 vbmc_host: "{{ (install|default({})).get('vbmc', {}).get('host', 'hypervisor') }}"
 vbmc_inventory_host: "{{ groups[vbmc_host]|first }}"
+vbmc_hypervisor: "{{ groups.get('hypervisor', ['hypervisor'])|first }}"
 vbmc_start_port: 6230
 action: install
 vbmc_user: "{{ (vbmc_host == 'undercloud') | ternary(ansible_user|default(ansible_ssh_user), 'root') }}"
