tripleo-overcloud: multi hypervisor support
1) nic-configs: VMs have 4 interfaces. We don’t add ‘management’ network
interface to nic-configs as this will be enabled automatically and will
also add default route (default via 172.16.0.1 dev eth3 proto dhcp) and
dns server(nameserver 172.16.0.1).
We won’t specify DNS server and default route through nic-configs as the
external switches (which are connected to our infrared created libvirt
network bridges) might not be having external connectivity.

2) Use 'ip -4 -o addr list' command as the bridge mode libvirt networks
might not have ipv6 addresses.

GH-360

Change-Id: I68c3b74235cac748547164f7a0d2368d86cd77db

--- a/plugins/tripleo-overcloud/update_inventory.yml
+++ b/plugins/tripleo-overcloud/update_inventory.yml
@@ -34,6 +34,8 @@
       # todo(obaranov) Remove hosts from the 'unused' group
       # Currently ansible does not allow to remove existing host from a group
       - name: add overcloud host
+        vars:
+            hypervisor_group: "{{ groups.get('hypervisor', ['hypervisor']) }}"
         include_tasks: tasks/add_overcloud_host.yml
         with_items: "{{ openstack_servers }}"
         loop_control:
