--- a/plugins/tripleo-undercloud/configure.yml
+++ b/plugins/tripleo-undercloud/configure.yml
@@ -9,7 +9,7 @@
       - conf_instack: '/usr/share/instack-undercloud/undercloud.conf.sample'
       - conf_oooclient: '/usr/share/python-tripleoclient/undercloud.conf.sample'
       - conf_oooclient_py3: '/usr/share/python3-tripleoclient/undercloud.conf.sample'
-      - default_conf: "{{ (osp_release <= 13) | ternary(conf_instack, (osp_release < 15) | ternary(conf_oooclient, conf_oooclient_py3)) }}"
+      - default_conf: "{{ (osp_release|int <= 13) | ternary(conf_instack, (osp_release < 15) | ternary(conf_oooclient, conf_oooclient_py3)) }}"
       - local_src: "{%- if conf.file|default('') -%}
                 {{ conf.file }}
                 {%- elif 'hypervisor' in groups.all or 'bmc' in groups -%}
