--- a/plugins/tripleo-overcloud/tag.yml
+++ b/plugins/tripleo-overcloud/tag.yml
@@ -130,7 +130,7 @@
                   ironic_cli: "{{ (install.version|default(undercloud_version)|openstack_release < 14)|ternary('ironic node-list','openstack baremetal node list') }}"
               shell: |
                   source ~/stackrc
-                  {{ ironic_cli }} | awk '/{{ item.name | default(item) }}/ {print $2}'
+                  {{ ironic_cli }} | awk '/\<{{ item.name | default(item) }}\>/ {print $2}'
               with_items: "{{ overcloud_facts.nodes | default([])}}"
               register: node_list
 
