--- a/plugins/tripleo-overcloud/tasks/network.yml
+++ b/plugins/tripleo-overcloud/tasks/network.yml
@@ -201,7 +201,17 @@
   template:
       dest: "{{ template_base }}/network/compute-dvr.yaml"
       src: "compute-dvr.yaml.j2"
-  when: install.network.dvr
+  when:
+      - install.network.dvr
+      - install.network.dvr.nic.override == ''
+
+- name: Copy the custom compute dvr yaml to the undercloud templates dir
+  copy:
+      src: "{{ install.network.dvr.nic.override }}"
+      dest: "{{ template_base }}/network/compute-dvr.yaml"
+  when:
+      - install.network.dvr
+      - not (install.network.dvr.nic.override == '')
 
 - name: Change network type in OVN ML2 environment file OSP 12
   become: yes
