Set the default value of image_download_source in Ironic to http
With OSP15 and above we have an option to deploy images
without using Swift Object Store (Swift).  The direct
deploy interface can now use http method for both
whole and partitioned disk images.

swift - IPA ramdisk retrieves instance image from the Object
http  - IPA ramdisk retrieves instance image from HTTP service
        served at conductor nodes.

(cherry picked from commit 64b64b6c2dd25913bab674b1cc8f09db412847e6)

Change-Id: I53a0c1651badbad36eaff54e27cd6941e41dd08d

--- a/plugins/tripleo-undercloud/configure.yml
+++ b/plugins/tripleo-undercloud/configure.yml
@@ -145,11 +145,14 @@
         when: install.workarounds != ''
 
       - block:
-          - name: Initialize a variable with undercloud custom env file content
+          - name: Initialize variable(s) with undercloud custom env file content
             set_fact:
                undercloud_custom_env_content: |
                    parameter_defaults:
                       IronicDefaultDeployInterface: direct
+                      {% if install.version|default(undercloud_version) | openstack_release > 14 and install.image.download.source == 'http' %}
+                   IronicImageDownloadSource: http
+                      {% endif %}
 
           - name: Create the undercloud custom env file
             copy:
