Add support for tempest_storage_plugin
Since there are some H.A tests, we should run
those tests serially.
Adds:
- downstream storage/manila tempest stests.
- add condition if test_dict.threads is defined to make it
  serialized and access threads number via test_dict.threads.

Change-Id: I5a487e0b7d6fdebdfce3a9be269503f28a6e1e7b

--- a/plugins/tempest/tasks/run_suite.yml
+++ b/plugins/tempest/tasks/run_suite.yml
@@ -126,8 +126,7 @@
             ostestr -s --no-pretty --regex '{{ regex | default('') }}'
             {{ whitelistfile }}
             {{ blacklistfile }}
-            {{ ('--concurrency ' + test.threads|string )
-            if test.threads|default('') else '' }}
+            {{ ('--concurrency ' + test_dict.threads|default(test.threads)|string ) }}
             {{ ('--black-regex ' + test.blackre|string|quote )
             if test.blackre|default('') else '' }}
             {{ (test.list) | ternary ('--list','') }}
