Not fatal not having platfrom python
ansible wants to run something even when the
update option is flase with given interpreter.
It basically breaks, all fedora and older RHEL.

Change-Id: I6e86058edfcc1d7f33b7ee14b9585e4e4af62eac

--- a/plugins/tripleo-undercloud/update_inventory.yml
+++ b/plugins/tripleo-undercloud/update_inventory.yml
@@ -27,7 +27,7 @@
 
 - name: Update inventory file after upgrading the Undercloud
   hosts: undercloud
-  any_errors_fatal: true
+  any_errors_fatal: false
   gather_facts: yes
   tags:
       - upgrade
