Not fatal not having platfrom python
ansible wants to gather facts with the wrong interprter,
even when the update option is false with given interpreter.
It basically breaks, all fedora and older RHEL support.

Change-Id: I6e86058edfcc1d7f33b7ee14b9585e4e4af62eac

--- a/plugins/tripleo-undercloud/update_inventory.yml
+++ b/plugins/tripleo-undercloud/update_inventory.yml
@@ -28,7 +28,7 @@
 - name: Update inventory file after upgrading the Undercloud
   hosts: undercloud
   any_errors_fatal: true
-  gather_facts: yes
+  gather_facts: no
   tags:
       - upgrade
       - upgrade_repos
