WIP pidone ext load balancer fix
Change-Id: I10e9c1c492dff44f3779dbaa09e8401fd85068a1

--- a/plugins/tripleo-overcloud/roles/loadbalancer/tasks/main.yml
+++ b/plugins/tripleo-overcloud/roles/loadbalancer/tasks/main.yml
@@ -91,6 +91,12 @@
       src: haproxy.cfg.j2
       dest: /etc/haproxy/haproxy.cfg
 
+- name: pidone1 nmcli connection reload
+  command: "nmcli connection reload"
+
+- name: pidone2 ifup alias
+  command: "ifup eth2:0"
+
 - name: start haproxy service
   service:
       name: haproxy
