--- a/plugins/tripleo-overcloud/tasks/network.yml
+++ b/plugins/tripleo-overcloud/tasks/network.yml
@@ -124,6 +124,14 @@
       - install.network.bgpvpn
       - install.version|default(undercloud_version)|openstack_release > 12
 
+- name:
+  debug:
+      msg: "{{ install.deployment.files }}"
+
+- name:
+  debug:
+      msg: "{{ install.deployment.files|basename }}"
+
 - name: Inject dvr override template
   vars:
       nics_subfolder: "{{ (install.version|default(undercloud_version)|openstack_release > 10) | ternary('', 'legacy') }}"
