prepare_uc_images: fix when registry.skip.puddle
Change-Id: Ib1a920f84d3386738094c9f0bb723ddf959e51c0

--- a/plugins/tripleo-undercloud/tasks/prepare_uc_images.yml
+++ b/plugins/tripleo-undercloud/tasks/prepare_uc_images.yml
@@ -159,14 +159,14 @@
               path: "{{ working_dir }}/containers-prepare-parameter.yaml"
               regexp: '(^\ +)tag: .*'
               replace: "\\1tag: {{ container_env['container-image-prepare']['tag'] }}"
-      when: not install.registry.skip.puddle
+      when: container_env['container-image-prepare']['tag'] != 'AUTODETECT'
 
     - block:
         - name: set satellite namespace
           replace:
               path: "{{ working_dir }}/containers-prepare-parameter.yaml"
               regexp: '(^\ +)namespace.*'
-              replace: "\\1namespace: {{ install.registry.mirror }}"
+              replace: "\\1namespace: {{ install.registry.mirror }}/{{ registry_namespace }}"
 
         - name: set satellite prefix
           replace:
