virsh: topology extend number count
In multi hypervisor implementation, request to extend nodes is
considered as totoal number of nodes instead of appending that
to existing node count i.e
1) ir --topology-nodes compute:3
2) ir virsh --topology-nodes compute:5 --topology-extend True
step 1 is creating 3 nodes in hypervisor and step 2 is adding two more
nodes to make the count to 5. With this the hypervisor will have
5 nodes instead of 8 nodes. In this change we fix it, so that
hypervisor will have have 8 nodes instead of 5 nodes.

GH-2689

Change-Id: Ib40c1bfd8f5fcef7f0d2475fbae1243dbc36fadc

--- a/plugins/virsh/tasks/load_topology.yml
+++ b/plugins/virsh/tasks/load_topology.yml
@@ -29,14 +29,6 @@
       topology_node: "{{ topology_node | combine(network_info.nodes[topology_node.name]|default(network_info.nodes.default), recursive=True) }}"
   when: not topology_node.interfaces
 
-- name: Set number of nodes of this type
-  set_fact:
-      node_num: "{{ node.value|int }}"
-
-- name: store number of nodes of this type
-  set_fact:
-      topology_node: "{{ topology_node | combine({'num': node_num}) }}"
-
 - name: Set default start_index
   set_fact:
       start_index: 0
@@ -47,7 +39,20 @@
   with_items: "{{ groups.all }}"
   when: provision.topology.extend | default(False)
 
-- name: set nod indexes
+- name: Set number of nodes of this type
+  set_fact:
+      node_num: "{{ node.value|int }}"
+
+- name: Set number of nodes of this type
+  set_fact:
+      node_num: "{{ node.value|int + start_index|int }}"
+  when: provision.topology.extend | default(False)
+
+- name: store number of nodes of this type
+  set_fact:
+      topology_node: "{{ topology_node | combine({'num': node_num}) }}"
+
+- name: set node indexes
   set_fact:
       node_indexes: []
 
