--- a/plugins/tripleo-overcloud/deploy.yml
+++ b/plugins/tripleo-overcloud/deploy.yml
@@ -5,19 +5,26 @@
       - deploy_preparation
       - deploy_environment
   tasks:
-      - shell: |
-          #MODIFY THT_ROOT to point to your tripleo-heat-templates
-          THT_ROOT=/usr/share/openstack-tripleo-heat-templates/
-          cd $THT_ROOT/environments
-          > docker.yaml
-          > docker-ha.yaml
-          find . -exec sed -i -e "s|docker/services/collectd.yaml|puppet/services/metrics/collectd.yaml|g" {} \;
-          find . -exec sed -e "s|docker/services/sensu-client.yaml|puppet/services/monitoring/sensu-client.yaml|g" -i {} \;
-          find . -exec sed -e "s|docker/services|puppet/services|g" -i {} \;
-        when:
-          - install.containers|bool == false
-          - install.version|default(undercloud_version)|openstack_release >= 12
-        become: yes
+      - block:
+        - shell: |
+            #MODIFY THT_ROOT to point to your tripleo-heat-templates
+            THT_ROOT=/usr/share/openstack-tripleo-heat-templates/
+            cd $THT_ROOT/environments
+            > docker.yaml
+            > docker-ha.yaml
+            find . -exec sed -i -e "s|docker/services/collectd.yaml|puppet/services/metrics/collectd.yaml|g" {} \;
+            find . -exec sed -e "s|docker/services/sensu-client.yaml|puppet/services/monitoring/sensu-client.yaml|g" -i {} \;
+            find . -exec sed -e "s|docker/services|puppet/services|g" -i {} \;
+          when:
+            - install.containers|bool == false
+            - install.version|default(undercloud_version)|openstack_release >= 12
+          become: yes
+        always:
+          - include_role:
+              name: collect-ansible-facts
+            vars:
+              collect_ansible_facts_filename: "infrared_tripleo-overcloud_non-container-hacks_{{ inventory_hostname }}"
+            failed_when: false
 
 - import_playbook: build_templates.yml
   tags:
@@ -56,79 +63,87 @@
       - deploy
   tasks:
       - block:
-          - name: adjust max number of concurrent builds to prevent undercloud overload
-            ini_file:
-                path: /etc/nova/nova.conf
-                section: DEFAULT
-                option: max_concurrent_builds
-                value: 5
-            become: yes
+        - block:
+            - name: adjust max number of concurrent builds to prevent undercloud overload
+              ini_file:
+                  path: /etc/nova/nova.conf
+                  section: DEFAULT
+                  option: max_concurrent_builds
+                  value: 5
+              become: yes
 
-          - name: restart nova services
-            command: "systemctl restart openstack-nova-*"
-            become: yes
-        when:
-            - install.version|openstack_release < 10
+            - name: restart nova services
+              command: "systemctl restart openstack-nova-*"
+              become: yes
+          when:
+              - install.version|openstack_release < 10
 
-      - name: Execute the pre overcloud deploy action
-        shell: |
-          {{ install.overcloud.predeploy.action }} &> pre_overcloud_install_action.log
-        register: pre_overcloud_install_action
-        ignore_errors: yes
-        when: install.get('overcloud', {}).get('predeploy', {}).get('action', {})
+        - name: Execute the pre overcloud deploy action
+          shell: |
+            {{ install.overcloud.predeploy.action }} &> pre_overcloud_install_action.log
+          register: pre_overcloud_install_action
+          ignore_errors: yes
+          when: install.get('overcloud', {}).get('predeploy', {}).get('action', {})
 
-      - name: Execute the overcloud deploy script
-        shell: |
-            source ~/stackrc
-            bash {{ overcloud_deploy_script }} &> overcloud_install.log
-        register: overcloud_deploy
-        ignore_errors: yes
+        - name: Execute the overcloud deploy script
+          shell: |
+              source ~/stackrc
+              bash {{ overcloud_deploy_script }} &> overcloud_install.log
+          register: overcloud_deploy
+          ignore_errors: yes
 
-      - include_role:
-            name: tls-everywhere
-        vars:
-            stages:
-                - post_overcloud
-        when:
-            - install.tls.everywhere|default(False)
-            - install.version|default(undercloud_version)|openstack_release >= 12
-            - overcloud_deploy.rc == 0
+        - include_role:
+              name: tls-everywhere
+          vars:
+              stages:
+                  - post_overcloud
+          when:
+              - install.tls.everywhere|default(False)
+              - install.version|default(undercloud_version)|openstack_release >= 12
+              - overcloud_deploy.rc == 0
 
-      - name: Print the last few lines of the output to spot failures
-        command: tail -n60 overcloud_install.log
+        - name: Print the last few lines of the output to spot failures
+          command: tail -n60 overcloud_install.log
 
-      # List of failures is supported since RHOS10
-      - name: Print stack failures
-        shell: |
-            source ~/stackrc
-            openstack stack failures list {{ install.overcloud.stack }}
-        when: overcloud_deploy.rc != 0 and install.version|default(undercloud_version)|openstack_release >= 10
-        tags: skip_ansible_lint
+        # List of failures is supported since RHOS10
+        - name: Print stack failures
+          shell: |
+              source ~/stackrc
+              openstack stack failures list {{ install.overcloud.stack }}
+          when: overcloud_deploy.rc != 0 and install.version|default(undercloud_version)|openstack_release >= 10
+          tags: skip_ansible_lint
 
-      - name: Prepare stack failures long log
-        shell: |
-            source ~/stackrc
-            openstack stack failures list {{ install.overcloud.stack }} --long > openstack_failures_long.log
-        when: overcloud_deploy.rc != 0 and install.version|default(undercloud_version)|openstack_release >= 10
-        tags: skip_ansible_lint
+        - name: Prepare stack failures long log
+          shell: |
+              source ~/stackrc
+              openstack stack failures list {{ install.overcloud.stack }} --long > openstack_failures_long.log
+          when: overcloud_deploy.rc != 0 and install.version|default(undercloud_version)|openstack_release >= 10
+          tags: skip_ansible_lint
 
-      - name: copy summary script
-        template:
-            src: deploy_info.sh.j2
-            dest: ~/deploy_info.sh
-            mode: 0755
-        tags: summary
+        - name: copy summary script
+          template:
+              src: deploy_info.sh.j2
+              dest: ~/deploy_info.sh
+              mode: 0755
+          tags: summary
 
-      - name: Prepare Execute the deployment summary script
-        become: yes
-        # TODO(yfried): use "file" module intead mkdir
-        shell: |
-            mkdir -p /var/log/extra/
-            source ~{{ ansible_user|default(ansible_ssh_user) }}/stackrc
-            ~{{ ansible_user|default(ansible_ssh_user) }}/deploy_info.sh --long > /var/log/extra/deploy_resources.log 2>&1 &
-            ~{{ ansible_user|default(ansible_ssh_user) }}/deploy_info.sh 2>&1 &
-            wait
-        tags: summary
+        - name: Prepare Execute the deployment summary script
+          become: yes
+          # TODO(yfried): use "file" module intead mkdir
+          shell: |
+              mkdir -p /var/log/extra/
+              source ~{{ ansible_user|default(ansible_ssh_user) }}/stackrc
+              ~{{ ansible_user|default(ansible_ssh_user) }}/deploy_info.sh --long > /var/log/extra/deploy_resources.log 2>&1 &
+              ~{{ ansible_user|default(ansible_ssh_user) }}/deploy_info.sh 2>&1 &
+              wait
+          tags: summary
+
+        always:
+          - include_role:
+              name: collect-ansible-facts
+            vars:
+              collect_ansible_facts_filename: "infrared_tripleo-overcloud_deploy_{{ inventory_hostname }}"
+            ignore_errors: true
 
 - name: Update inventory with overcloud details
   import_playbook: update_inventory.yml
@@ -145,77 +160,85 @@
   tags:
       - deploy
   tasks:
-    - fail:
-          msg: "Overcloud deployment failed... :("
-      when: overcloud_deploy is defined and overcloud_deploy.rc != 0
+    - block:
+      - fail:
+            msg: "Overcloud deployment failed... :("
+        when: overcloud_deploy is defined and overcloud_deploy.rc != 0
 
-    - name: verify overcloudrc was created
-      wait_for:
-          path: "{{ overcloudrc_file }}"
-          state: present
-          timeout: 60
+      - name: verify overcloudrc was created
+        wait_for:
+            path: "{{ overcloudrc_file }}"
+            state: present
+            timeout: 60
 
-    - name: check if we have v3 rc file
-      stat:
-          path: "{{ ansible_user_dir }}/{{ install.overcloud.stack }}rc.v3"
-      register: rc_file_path
-      tags:
-          - clouds_file
+      - name: check if we have v3 rc file
+        stat:
+            path: "{{ ansible_user_dir }}/{{ install.overcloud.stack }}rc.v3"
+        register: rc_file_path
+        tags:
+            - clouds_file
 
-    - name: update clouds.yaml file
-      include_tasks: clouds.yml
-      vars:
-            v3_file: "{{ install.overcloud.stack }}rc.v3"
-            v2_file: "{{ install.overcloud.stack }}rc"
-            auth_file_path: "{{ ansible_user_dir }}/{{ rc_file_path.stat.exists | ternary(v3_file, v2_file) }}"
-            cloudname: "{{ (auth_file_path|basename == 'stackrc') |ternary('undercloud','overcloud') }}"
-      tags:
-          - clouds_file
+      - name: update clouds.yaml file
+        include_tasks: clouds.yml
+        vars:
+              v3_file: "{{ install.overcloud.stack }}rc.v3"
+              v2_file: "{{ install.overcloud.stack }}rc"
+              auth_file_path: "{{ ansible_user_dir }}/{{ rc_file_path.stat.exists | ternary(v3_file, v2_file) }}"
+              cloudname: "{{ (auth_file_path|basename == 'stackrc') |ternary('undercloud','overcloud') }}"
+        tags:
+            - clouds_file
 
-    - name: fetch the overcloud rc file
-      tags:
-          - fetch_rc_file
-      fetch:
-          src: "{{ overcloudrc_file }}"
-          dest: "{{ inventory_dir }}/keystonerc"
-          flat: yes
-          fail_on_missing: yes
+      - name: fetch the overcloud rc file
+        tags:
+            - fetch_rc_file
+        fetch:
+            src: "{{ overcloudrc_file }}"
+            dest: "{{ inventory_dir }}/keystonerc"
+            flat: yes
+            fail_on_missing: yes
 
-    - name: fetch overcloud v3 file if present
-      tags:
-          - fetch_rc_file
-      fetch:
-          src: "{{ ansible_user_dir }}/{{ install.overcloud.stack }}rc.v3"
-          dest: "{{ inventory_dir }}/{{ install.overcloud.stack }}rc.v3"
-          flat: yes
-          fail_on_missing: no
+      - name: fetch overcloud v3 file if present
+        tags:
+            - fetch_rc_file
+        fetch:
+            src: "{{ ansible_user_dir }}/{{ install.overcloud.stack }}rc.v3"
+            dest: "{{ inventory_dir }}/{{ install.overcloud.stack }}rc.v3"
+            flat: yes
+            fail_on_missing: no
 
-    - name: Read baremetal nodes got from user input on hybrid deployment
-      block:
-        - name: Set hybrid var
-          include_vars:
-              file: "{{ install.hybrid }}"
-              name: bm_nodes
+      - name: Read baremetal nodes got from user input on hybrid deployment
+        block:
+          - name: Set hybrid var
+            include_vars:
+                file: "{{ install.hybrid }}"
+                name: bm_nodes
 
-        - name: get nodes name
-          set_fact:
-              node_name: "{{ item.name }}"
-          with_items: "{{ bm_nodes.nodes }}"
-          register: nodes
+          - name: get nodes name
+            set_fact:
+                node_name: "{{ item.name }}"
+            with_items: "{{ bm_nodes.nodes }}"
+            register: nodes
 
-        - name: set list of bm nodes
-          set_fact:
-              bm_nodes: "{{ nodes.results | map(attribute='ansible_facts.node_name') | list }}"
-      when: install.hybrid is defined
+          - name: set list of bm nodes
+            set_fact:
+                bm_nodes: "{{ nodes.results | map(attribute='ansible_facts.node_name') | list }}"
+        when: install.hybrid is defined
 
-    - name: set bm_nodes to empty when not hybrid
-      set_fact:
-          bm_nodes: ""
-      when: install.hybrid is not defined
+      - name: set bm_nodes to empty when not hybrid
+        set_fact:
+            bm_nodes: ""
+        when: install.hybrid is not defined
 
-    - name: Get overcloud nodes
-      set_fact:
-        oc_nodes: "{{ groups.get('overcloud_nodes', []) }}"
+      - name: Get overcloud nodes
+        set_fact:
+          oc_nodes: "{{ groups.get('overcloud_nodes', []) }}"
+
+      always:
+        - include_role:
+            name: collect-ansible-facts
+          vars:
+            collect_ansible_facts_filename: "infrared_tripleo-overcloud_verify_{{ inventory_hostname }}"
+          ignore_errors: true
 
 - name: Allow vbmc ports for all the overcloud nodes
   hosts: localhost
