add new overcloud param: container_images_urls
This new param allows to specify a list of container images URLs that
will be used instead of default ones from the puddle.

Change-Id: I0884671a45e1ea759898025513fe4744ce859e15

--- a/plugins/tripleo-overcloud/roles/containers/prepare-templates/tasks/pre.yml
+++ b/plugins/tripleo-overcloud/roles/containers/prepare-templates/tasks/pre.yml
@@ -36,6 +36,11 @@
       - install.registry.undercloud.skip
   tags: container-images-packages
 
+- name: set install_container_images_urls fact
+  set_fact:
+    install_container_images_urls: "{{ install.get('container', {}).get('images', {}).get('urls', '').split(',') }}"
+  when: install.get('container', {}).get('images', {}).get('urls', '')
+
 - name: Reload SSHd
   become: true
   shell: sleep 1; pkill -u {{ ansible_user | default(ansible_ssh_user) }} sshd
