Always use introspection data to get storage disks
We should always get disks from introspection for the storage and
use list of baremetal node ids for looking into data.

Change-Id: I8542d004b4b5438eabfd1efa806aed4d5cccf44b

--- a/plugins/openstack/provision_vms.yml
+++ b/plugins/openstack/provision_vms.yml
@@ -33,3 +33,9 @@
             input:
                 servers: "{{ server_list }}"
         include_tasks: tasks/register_resources_file.yml
+
+      - name: register volumes
+        vars:
+            input:
+                volumes: "{{ volume_list }}"
+        include_tasks: tasks/register_resources_file.yml
